@@ -1,42 +1,22 @@
 package tillerino.tillerinobot.lang;
 
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.Arrays;
-import java.util.stream.Stream;
 
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
-import org.junit.runners.Parameterized.Parameters;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.EnumSource;
 import org.tillerino.osuApiModel.Mods;
 import org.tillerino.osuApiModel.OsuApiUser;
 import org.tillerino.ppaddict.chat.GameChatResponse;
 
-import lombok.RequiredArgsConstructor;
 import tillerino.tillerinobot.BeatmapMetaTest;
 
-@RequiredArgsConstructor
-@RunWith(Parameterized.class)
 public class AllLanguagesTest {
-	@Parameters(name = "{index}: {0}")
-	public static Iterable<Object[]> data() {
-		return Stream.of(LanguageIdentifier.values()).map(x -> new Object[] { x }).collect(toList());
-	}
-
-	private final LanguageIdentifier ident;
-
-	private Language lang;
-
-	@Before
-	public void instantiate() throws Exception {
-		lang = ident.cls.newInstance();
-	}
-
-	@Test
-	public void testPlain() throws Exception {
+	@ParameterizedTest
+	@EnumSource(LanguageIdentifier.class)
+	public void testPlain(LanguageIdentifier ident) throws Exception {
+		Language lang = ident.cls.getConstructor().newInstance();
 		lang.apiTimeoutException();
 		lang.complaint();
 		lang.excuseForError();
@@ -55,68 +35,90 @@ public class AllLanguagesTest {
 		lang.unknownBeatmap();
 	}
 
-	@Test
-	public void testOptionals() throws Exception {
+	@ParameterizedTest
+	@EnumSource(LanguageIdentifier.class)
+	public void testOptionals(LanguageIdentifier ident) throws Exception {
+		Language lang = ident.cls.getConstructor().newInstance();
 		lang.optionalCommentOnLanguage(new OsuApiUser());
 		lang.optionalCommentOnNP(new OsuApiUser(), BeatmapMetaTest.fakeBeatmapMeta(101));
 		// lang.optionalCommentOnRecommendation(new OsuApiUser(), recommendation)
 		lang.optionalCommentOnWith(new OsuApiUser(), BeatmapMetaTest.fakeBeatmapMeta(101));
 	}
 
-	@Test
-	public void testExternalException() throws Exception {
+	@ParameterizedTest
+	@EnumSource(LanguageIdentifier.class)
+	public void testExternalException(LanguageIdentifier ident) throws Exception {
+		Language lang = ident.cls.getConstructor().newInstance();
 		assertThat(lang.externalException("ABCDEF")).as("External exception").contains("ABCDEF");
 	}
 
-	@Test
-	public void testFAQ() throws Exception {
+	@ParameterizedTest
+	@EnumSource(LanguageIdentifier.class)
+	public void testFAQ(LanguageIdentifier ident) throws Exception {
+		Language lang = ident.cls.getConstructor().newInstance();
 		assertThat(lang.faq()).as("FAQ").contains("https://github.com/Tillerino/Tillerinobot/wiki/FAQ");
 	}
 
-	@Test
-	public void testFeatureRankRestricted() throws Exception {
+	@ParameterizedTest
+	@EnumSource(LanguageIdentifier.class)
+	public void testFeatureRankRestricted(LanguageIdentifier ident) throws Exception {
+		Language lang = ident.cls.getConstructor().newInstance();
 		assertThat(lang.featureRankRestricted("THE_FEATURE", 1234, new OsuApiUser())).as("Rank-restricted feature")
 				.contains("THE_FEATURE", "1234");
 	}
 
-	@Test
-	public void testHug() throws Exception {
+	@ParameterizedTest
+	@EnumSource(LanguageIdentifier.class)
+	public void testHug(LanguageIdentifier ident) throws Exception {
+		Language lang = ident.cls.getConstructor().newInstance();
 		for (int attempt = 0; attempt < 1000; attempt++) {
 			assertThat(lang.hug(new OsuApiUser())).isNotEqualTo(GameChatResponse.none());
 		}
 	}
 
-	@Test
-	public void testInternalException() throws Exception {
+	@ParameterizedTest
+	@EnumSource(LanguageIdentifier.class)
+	public void testInternalException(LanguageIdentifier ident) throws Exception {
+		Language lang = ident.cls.getConstructor().newInstance();
 		assertThat(lang.internalException("ABCDEF")).as("Internal exception").contains("ABCDEF");
 	}
 
-	@Test
-	public void testInvalidAccuracy() throws Exception {
+	@ParameterizedTest
+	@EnumSource(LanguageIdentifier.class)
+	public void testInvalidAccuracy(LanguageIdentifier ident) throws Exception {
+		Language lang = ident.cls.getConstructor().newInstance();
 		String message = lang.invalidAccuracy("XXX");
 		if (!ident.toString().toLowerCase().contains("tsundere")) {
 			assertThat(message).as("Invalid Accuracy").contains("XXX");
 		}
 	}
 
-	@Test
-	public void testInvalidChoice() throws Exception {
+	@ParameterizedTest
+	@EnumSource(LanguageIdentifier.class)
+	public void testInvalidChoice(LanguageIdentifier ident) throws Exception {
+		Language lang = ident.cls.getConstructor().newInstance();
 		assertThat(lang.invalidChoice("XXX", "A, B, C")).as("Invalid Choice").contains("XXX", "A, B, C");
 	}
 
-	@Test
-	public void testTryWithmods() throws Exception {
+	@ParameterizedTest
+	@EnumSource(LanguageIdentifier.class)
+	public void testTryWithmods(LanguageIdentifier ident) throws Exception {
+		Language lang = ident.cls.getConstructor().newInstance();
 		assertThat(lang.tryWithMods(Arrays.asList(Mods.DoubleTime, Mods.HardRock))).as("Try with mods").contains("DT",
 				"HR");
 	}
 
-	@Test
-	public void testUnknownCommand() throws Exception {
+	@ParameterizedTest
+	@EnumSource(LanguageIdentifier.class)
+	public void testUnknownCommand(LanguageIdentifier ident) throws Exception {
+		Language lang = ident.cls.getConstructor().newInstance();
 		assertThat(lang.unknownCommand("THE_COMMAND")).as("Unknown command").contains("THE_COMMAND");
 	}
 
-	@Test
-	public void testWelcome() throws Exception {
+	@ParameterizedTest
+	@EnumSource(LanguageIdentifier.class)
+	public void testWelcome(LanguageIdentifier ident) throws Exception {
+		Language lang = ident.cls.getConstructor().newInstance();
 		for (long inactiveTime : new long[] {
 				60 * 1000 - 1,
 				24 * 60 * 60 * 1000 - 1,
